--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Two-Factor-Authentication
+server.port=8687
+logging.level.org.springframework=info
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:mysql://localhost:3306/2factorauth?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=data#12345
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
